[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "po3way"
description = "Three way merge for gettext po file."
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Julien Palard", email = "julien@palard.fr"},
]
requires-python = ">= 3.7"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/JulienPalard/po3way"

[project.scripts]
po3way = "po3way:main"

[tool.setuptools]
py-modules = [
    "po3way",
]
include-package-data = false

[tool.setuptools.dynamic.version]
attr = "po3way.__version__"

[tool.black]
